# uhppote-rs

./: Cargo.toml  README.md
request_derive/: Cargo.toml
request_derive/src/: lib.rs
src/: lib.rs
src/messages/: add_task.rs  clear_task_list.rs  clear_time_profiles.rs  delete_card.rs  delete_cards.rs  get_card_by_id.rs  get_card_by_index.rs  get_cards.rs  get_config.rs  get_door_control_state.rs  get_event.rs  get_event_index.rs  get_listener.rs  get_status.rs  get_time.rs  get_time_profile.rs  mod.rs  open_door.rs  put_card.rs  refresh_task_list.rs  set_address.rs  set_door_control_state.rs  set_event_index.rs  set_first_card.rs  set_listener.rs  set_record_special_events.rs  set_time.rs  set_time_profile.rs
src/messages/utils/: bcd.rs  mod.rs  request.rs  types.rs
src/types/: card.rs  device_config.rs  direction.rs  door_control.rs  event.rs  mod.rs  status.rs  task.rs  time_profile.rs
uhppote-derive/: Cargo.toml
