[package]
name = "uhppote-rs"
authors = ["Wouter de Bie <wouter@evenflow.nl>"]
repository = "https://github.com/wouterdebie/uhppote-rs"
description = "FFI bindings to uhppoted-dll"
readme = "README.md"
license = "MIT"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
c_vec = "2.0.0"
chrono = "0.4.19"
uhppote-sys = {path = "../uhppote-sys"}
