[package]
name = "uhppote-rs"
authors = ["Wouter de Bie <wouter@evenflow.nl>"]
repository = "https://github.com/wouterdebie/uhppote-rs"
description = "Rust bindings for the UHPPOTE library"
readme = "README.md"
license = "MIT"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
request_derive = { path = "request_derive" }
bincode = {version =  "2.0.0-rc.1", features=["derive", "serde"]}
